test/files/run/constrained-types.check

scala> class Annot(obj: Any) extends annotation.Annotation with annotation.TypeConstraint
class Annot

scala> 

scala> class A {
  val x = "hello"
  val y: Int @Annot(x) = 10
  override def toString = "an A"
}
class A

scala> 

scala> val a = new A
val a: A = an A

scala> val y = a.y   // should rewrite "this.x" to "a.x"
val y: Int @Annot(a.x) = 10

scala> var a2 = new A
var a2: A = an A

scala> val y2 = a2.y   // should drop the annotation
val y2: Int = 10

scala> 

scala> object Stuff {
  val x = "hello"
  val y : Int @Annot(x) = 10
}
object Stuff

scala> 

scala> val y = Stuff.y // should rewrite the annotation
val y: Int @Annot(Stuff.x) = 10

scala> 

scala> class B {
  val y: Int @Annot(Stuff.x) = 10
  override def toString = "a B"
}
class B

scala> 

scala> val b = new B
val b: B = a B

scala> val y = b.y  // should keep the annotation
val y: Int @Annot(Stuff.x) = 10

scala> def m(x: String): String @Annot(x) = x
def m(x: String): String @Annot(x)

scala> 

scala> val three = "three"
val three: String = three

scala> val three2 = m(three:three.type)  // should change x to three
val three2: String @Annot(three) = three

scala> var four = "four"
var four: String = four

scala> val four2 = m(four) // should have an existential bound
warning: there was 1 feature warning; for details, enable `:setting -feature' or `:replay -feature'
val four2: String @Annot(x) forSome { val x: String } = four

scala> val four3 = four2   // should have the same type as four2
warning: there was 1 feature warning; for details, enable `:setting -feature' or `:replay -feature'
val four3: String @Annot(x) forSome { val x: String } = four

scala> val stuff = m("stuff") // should not crash
val stuff: String @Annot("stuff") = stuff

scala> 

scala> class peer extends annotation.Annotation // should not crash
class peer

scala> 

scala> class NPE[T <: NPE[T] @peer] // should not crash
class NPE

scala> 

scala> def m = {
  val x = "three"
  val y : String @Annot(x) = x
  y
} // x should not escape the local scope with a narrow type
warning: there was 1 feature warning; for details, enable `:setting -feature' or `:replay -feature'
def m: String @Annot(x) forSome { val x: String }

scala> 

scala> def n(y: String) = {
  def m(x: String) : String @Annot(x) = {
    (if (x == "")
      m("default")
    else
      x)
  }
  m("stuff".stripMargin)
} // x should be existentially bound
warning: there was 1 feature warning; for details, enable `:setting -feature' or `:replay -feature'
def n(y: String): String @Annot(x) forSome { val x: String }

scala> 

scala> class rep extends annotation.Annotation { }
class rep

scala> 

scala> object A { val x = "hello" : String @ rep }
object A
warning: previously defined class A is not a companion to object A.
Companions must be defined together; you may wish to use :paste mode for this.

scala> 

scala> val y = a.x // should drop the annotation
val y: String = hello

scala> 

scala> val x = 3 : Int @Annot(e+f+g+h) // should have a graceful error message
                              ^
       error: not found: value e
                                ^
       error: not found: value f
                                  ^
       error: not found: value g
                                    ^
       error: not found: value h

scala> :quit
